# web-design-eval

./: .gitignore  PLAN.md  README.md  pyproject.toml
output/portfolio-1/portfolio-dark-saas-42/: reference.source.html  spec.json
output/portfolio-dark-saas-22/: index.html  spec.json
output/portfolio-dark-saas-23/: index.html  spec.json
recipe/: cli.py  pipeline.py  render.py
tests/eval1/: README.md  instruction.md  task.toml
tests/eval1/environment/: Dockerfile
tests/eval1/environment/recipe/: archetypes.py  synthesise.py  validate.py
tests/eval1/tests/: test.sh  test_outputs.py
web-design/: README.md  task.toml
