[project]
name = "web-design-eval"
version = "0.1.0"
description = "Scalable RL environment recipe for grading design-to-code coding agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "playwright>=1.49.0",
    "Pillow>=11.0.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recipe"]
